#143 – prospective tree-temporal scan statistic